[gd_scene load_steps=17 format=2]

[ext_resource path="res://SplitList.gd" type="Script" id=1]
[ext_resource path="res://SplitBench.gd" type="Script" id=2]
[ext_resource path="res://asserts/art/resetButton.png" type="Texture" id=3]
[ext_resource path="res://asserts/art/totalBlack.png" type="Texture" id=4]
[ext_resource path="res://asserts/art/confirmButton.png" type="Texture" id=5]
[ext_resource path="res://asserts/themes/正文字体.tres" type="Theme" id=6]
[ext_resource path="res://asserts/art/hoverBox.png" type="Texture" id=7]
[ext_resource path="res://SplitScene.gd" type="Script" id=8]
[ext_resource path="res://asserts/themes/标题字体.tres" type="Theme" id=9]
[ext_resource path="res://asserts/themes/大号正文字体.tres" type="Theme" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="SplitScene" type="Node2D"]
script = ExtResource( 8 )

[node name="SplitBench" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ConfirmButton" type="TextureButton" parent="SplitBench"]
margin_left = 488.0
margin_top = 168.0
margin_right = 576.0
margin_bottom = 232.0
texture_normal = ExtResource( 5 )
expand = true

[node name="ResetButton" type="TextureButton" parent="SplitBench"]
margin_left = 584.0
margin_top = 168.0
margin_right = 680.0
margin_bottom = 232.0
texture_normal = ExtResource( 3 )
expand = true

[node name="CurrentWord" type="Label" parent="SplitBench"]
margin_left = 80.0
margin_top = 168.0
margin_right = 384.0
margin_bottom = 232.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
align = 1
valign = 1

[node name="Line" type="TextureRect" parent="SplitBench"]
margin_left = 80.0
margin_top = 232.0
margin_right = 384.0
margin_bottom = 240.0
texture = ExtResource( 4 )
expand = true

[node name="NumWindow" type="TextureRect" parent="SplitBench"]
margin_left = 400.0
margin_top = 168.0
margin_right = 480.0
margin_bottom = 232.0
texture = ExtResource( 7 )
expand = true

[node name="NumText" type="Label" parent="SplitBench/NumWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -32.0
margin_right = 40.0
margin_bottom = 32.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
align = 1
valign = 1

[node name="SplitList" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="SplitList"]
margin_left = 128.0
margin_top = 328.0
margin_right = 704.0
margin_bottom = 960.0
theme = ExtResource( 6 )
custom_colors/guide_color = Color( 0.47451, 0.333333, 0.282353, 1 )
custom_colors/font_color = Color( 0.831373, 0.631373, 0.372549, 1 )
custom_constants/hseparation = 30
custom_styles/cursor = SubResource( 1 )
custom_styles/selected_focus = SubResource( 2 )
custom_styles/bg_focus = SubResource( 3 )
custom_styles/cursor_unfocused = SubResource( 4 )
custom_styles/selected = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_columns = 4
same_column_width = true

[node name="Title" type="Label" parent="."]
margin_left = 320.0
margin_top = 80.0
margin_right = 520.0
margin_bottom = 155.0
theme = ExtResource( 9 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "单词切割"
align = 1
valign = 1
